Fix styling on mobile (slide to accept)

--- a/src/sass/views/includes/slideToAcceptSuccess.scss
+++ b/src/sass/views/includes/slideToAcceptSuccess.scss
@@ -1,5 +1,4 @@
 slide-to-accept-success {
-  $slider-bg-color: #5063B9;
   $success-bg-color: #11D1A6;
   height: 100%;
   width: 100%;
@@ -19,7 +18,7 @@ slide-to-accept-success {
       $scale-factor: 20;
       height: 10vmax;
       width: 10vmax;
-      background: $slider-bg-color;
+      background: $v-slider-bg-color;
       bottom: 0;
       position: absolute;
       left: calc(50% - 5vmax);
